namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multi-arch-demo
spec:
  finalizers:
  - kubernetes
