deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: registry
  name: registry
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: registry
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: registry
        deployment: registry
    spec:
      serviceAccountName: anyuid
      containers:
        - image: docker.io/library/registry:2.8.1
          name: registry
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
          - mountPath: /var/lib/registry
            name: storage
        - name: webui
          image: docker.io/joxit/docker-registry-ui:latest
        - command:
          - sleep
          - infinity
          image: image-registry.openshift-image-registry.svc:5000/openshift/tools
          imagePullPolicy: Always
          name: tools
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /registry
            name: storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: registry
