service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry
  name: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: registry
      port: 5000
      protocol: TCP
      targetPort: 5000
    - name: webui
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: registry
    deployment: registry
  sessionAffinity: None
  type: ClusterIP
