route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: registry
  name: registry
spec:
  port:
    targetPort: registry
  to:
    kind: Service
    name: registry
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: registry
  name: webui
spec:
  port:
    targetPort: webui
  to:
    kind: Service
    name: registry
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
